<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl1"
        android:textOn="@string/btn_text_X"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton4"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl2"
        android:textOn="@string/btn_text_X"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton1"
        app:layout_constraintTop_toTopOf="@+id/toggleButton1" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl3"
        android:textOn="@string/btn_text_X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton2"
        app:layout_constraintTop_toTopOf="@+id/toggleButton2" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl4"
        android:textOn="@string/btn_text_X"
        app:layout_constraintBottom_toTopOf="@+id/btn_dismiss"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl5"
        android:textOn="@string/btn_text_X"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton4"
        app:layout_constraintTop_toTopOf="@+id/toggleButton4" />

    <ToggleButton
        android:id="@+id/toggleButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGame"
        android:textOff="@string/btn_text_zufallszahl6"
        android:textOn="@string/btn_text_X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton5"
        app:layout_constraintTop_toTopOf="@+id/toggleButton5" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView_summe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/btn_text_summe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:onClick="onDismiss"
        android:text="@string/btn_text_dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_text_restart"
        android:onClick="onRestart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_dismiss" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>